fixed spacing again

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -403,10 +403,10 @@ h1 {
 }
 
 .containers {
-  width: calc(50% - 200px); /* 50% of the remaining space, minus any margins */
+  width: calc(50% - 200px); 
   padding-left: 30px;
   padding-top: 10px;
-  margin-left: 55%;
+  margin-left: 60%;
   background-color: white;
   border-radius: 10px;
   
